src/objects/DevApp_Contacts__c.object
<CustomObject>
    <description>Custom junction object between DeviceApplications and Contacts, in order to track external partner contacts for each DeviceApp relationship  (MOTOREADY)</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <formula>Device_Application__r.Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>text(Contact__r.Contact_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Responsibility</relationshipLabel>
        <relationshipName>DevApp_Contactss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DeviceName__c</fullName>
        <formula>Device_Application__r.Device__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeviceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Application</label>
        <referenceTo>DeviceApplicationAssoc__c</referenceTo>
        <relationshipLabel>DevApp External Contacts</relationshipLabel>
        <relationshipName>DevApp_External_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <formula>Contact__r.Job_Function__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>DevApp_Contacts</label>
    <nameField>
        <displayFormat>DevAppContact-{0000}</displayFormat>
        <label>DevApp_Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevApp External Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>